<resources>
    <string name="app_name">radAR</string>
    <string name="sign_up_header">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_displayname">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to the navigation drawer -->
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="action_settings">Settings</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="trackuser">Track this user</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="title_activity_chat_list">ChatListActivity</string>

    <!-- Data related to MapsActivity -->
    <string name="melbourne_university_lat">-37.7963689</string>
    <string name="melbourne_university_lng">144.9611738</string>
    <string name="unimelb">Melbourne University</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawer_home">DrawerHomeActivity</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_chats_list">ChatsListActivity</string>
    <string name="app_label">Radar</string>
    <string name="search_hint">Search for user..</string>

    <string name="title_activity_groups">GroupsActivity</string>
    <string name="default_description">Hello, I am using Radar!</string>

    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>

    <string name="edit_profile">Edit Profile</string>

    <string name="directionsApiKey">AIzaSyAx1-_v4CYijIxiBVvGq_WQnyc0GeO5GCA</string>

    <!-- Data related to Home Screen Activity -->
    <string name="new_group">New Group</string>
    <string name="new_chat">New Chat</string>
    <string name="new_friend">Add Friend</string>
    <string name="tracking_group">Tracking Group</string>
    <string name="name">Name</string>
    <string name="chat">Chat</string>
    <string name="ar">AR</string>
    <string name="not_tracking">Currently not tracking (sharing and receiving location updates). Tap to start tracking.</string>
    <string name="tracking">Currently tracking (sharing and receiving location updates). Tap to stop tracking.</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="off_caps">OFF</string>
    <string name="on_caps">ON</string>
    <string name="group_name">Group name</string>
    <string name="leave_group">Leave Group</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="meeting_place_location">Click SELECT to select a location</string>
    <string name="location_image">location image</string>
    <string name="cancel_button">cancel button</string>
    <string name="new_group1">New group</string>
    <string name="chat_list_title">Chats</string>
    <string name="add_members">Add members</string>
    <string name="meeting_point">Meeting point</string>
    <string name="set_a_meeting_point">Set a meeting point.</string>
    <string name="select">SELECT</string>
    <string name="remove">REMOVE</string>
    <string name="set_meeting_point">SET</string>
    <string name="navigate">NAVIGATE</string>
    <string name="members_to_invite">Members to invite</string>
    <string name="invite_members">Invite</string>
    <string name="online">Online</string>

</resources>
