<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="radar.radar.HomeScreenActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/app_bar_home_screen">

    <fragment
        android:id="@+id/home_screen_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context="radar.radar.HomeScreenActivity" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/place_autocomplete_powered_by_google_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_current_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_my_location_white_48dp"
        android:visibility="visible"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_white_48px"
        android:visibility="visible"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/fab_current_loc"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab_current_loc"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_remove_circle_outline_white_48dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_person_add_white_48dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="textPersonName"
        android:text="@string/new_friend"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/fab_new_friend"
        app:layout_constraintTop_toTopOf="@+id/fab_new_friend" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab_new_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_group_add_white_48dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="textPersonName"
        android:text="@string/new_group"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton5"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton5" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_message_white_48dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="textPersonName"
        android:text="@string/new_chat"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton2" />

</android.support.constraint.ConstraintLayout>
